--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -21,7 +21,8 @@ jobs:
         run: hugo --minify
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: main
           publish_dir: ./public
